--- a/css/style.css
+++ b/css/style.css
@@ -117,17 +117,16 @@ nav{
   margin-left: 10px;
 }
 
-#dark-light .container{
-  top: 20%;
-  left: 0;
-  position: absolute;
+#dark-light{
+  top: 40%;
+  right: -1020px;
+  position: fixed;
   z-index: 111111;
-  overflow-x: hidden;
 }
 
-/* .cev #dark-div{
-  right: -156px;
-} */
+.cev #dark-light{
+  right: -1180px;
+}
 
 .dark-div{
   width: 162.27px;
@@ -145,8 +144,9 @@ nav{
   background-repeat: no-repeat;
   background-position: top 1px left 12px;
   border: none;
-  top: 44px;
-  left: -42px;
+  top: 9px;
+  left: -20px;
+  cursor: pointer;
 }
 
 .darks-btn1{
